prevent table overflow override

--- a/frontend/src/css/app/Cell.css
+++ b/frontend/src/css/app/Cell.css
@@ -97,8 +97,8 @@
       overflow: auto;
     }
 
-    &:hover .output-area,
-    &:focus-within .output-area {
+    &:hover .output-area:not(:has(> .output:only-child > marimo-ui-element:only-child > marimo-table)),
+    &:focus-within .output-area:not(:has(> .output:only-child > marimo-ui-element:only-child > marimo-table)) {
       overflow: visible !important;
     }
 
